--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,10 +31,15 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+
+    buildFeatures {
+        viewBinding = true
+    }
 }
 
 dependencies {
 
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     def nav_version = "2.3.1"
     def lifecycle_version = "2.2.0"
 
