Comment Recycler Class added

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,7 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.room:room-runtime:2.2.5'
     implementation 'com.google.firebase:firebase-storage:19.2.0'
+    implementation 'androidx.palette:palette-ktx:1.0.0'
     annotationProcessor 'androidx.room:room-compiler:2.2.5'
     def nav_version = "2.3.1"
     def lifecycle_version = "2.2.0"
