added network call

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -109,4 +109,8 @@ dependencies {
     //kapt
     kapt 'com.github.bumptech.glide:compiler:4.8.0'
 
+
+    //Network call
+    implementation 'androidx.localbroadcastmanager:localbroadcastmanager:1.0.0'
+
 }
